force-app/main/default/objects/Admission__c/Admission__c.object-meta.xml
<CustomObject>
    <label>Admission</label>
    <nameField>
        <displayFormat>ADM-{000}</displayFormat>
        <label>Admission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admission</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>