force-app/main/default/objects/Admission__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <label>Academic Year</label>
    <referenceTo>Academic_Year__c</referenceTo>
    <relationshipLabel>Admission</relationshipLabel>
    <relationshipName>Admission</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>