force-app/main/default/objects/Admission__c/fields/Admission_Available_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Admission_Available_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admission Available on Website</label>
    <type>Checkbox</type>
</CustomField>