force-app/main/default/objects/Admission__c/fields/Admission_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Close_Date__c</fullName>
    <label>Admission Close Date</label>
    <type>Date</type>
</CustomField>