force-app/main/default/objects/Admission__c/fields/Assign_Classes__c.field-meta.xml
<CustomField>
    <fullName>Assign_Classes__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assign Classes</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Admission</relationshipLabel>
    <relationshipName>Admission</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>