force-app/main/default/objects/Admission__c/fields/Max_No_of_Applications__c.field-meta.xml
<CustomField>
    <fullName>Max_No_of_Applications__c</fullName>
    <label>Max No. of Applications</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>