force-app/main/default/objects/Admission__c/fields/Minimum_Age_limit__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age_limit__c</fullName>
    <label>Minimum Age limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>