force-app/main/default/objects/Admission__c/fields/No_of_Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>No_of_Seats_Available__c</fullName>
    <formula>Total_No_of_Seats__c - Seats_Filled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Seats Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>