force-app/main/default/objects/Admission__c/fields/Required_Proofs__c.field-meta.xml
<CustomField>
    <fullName>Required_Proofs__c</fullName>
    <label>Required Proofs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Identity Proof</fullName>
            </value>
            <value>
                <fullName>TC Certificate</fullName>
            </value>
            <value>
                <fullName>Residence Proof</fullName>
            </value>
            <value>
                <fullName>Birth Certificate</fullName>
            </value>
            <value>
                <fullName>Transfer Certificate</fullName>
            </value>
            <value>
                <fullName>Parent Aadhar Card</fullName>
            </value>
            <value>
                <fullName>Child Aadhar Card</fullName>
            </value>
            <value>
                <fullName>Medical Reports</fullName>
            </value>
            <value>
                <fullName>Photograph - Child</fullName>
            </value>
            <value>
                <fullName>Photograph - Parents/Guardian</fullName>
            </value>
            <value>
                <fullName>Marksheet Report Card (if applicable)</fullName>
            </value>
            <value>
                <fullName>Migration Certificate if any</fullName>
            </value>
            <value>
                <fullName>Government Proof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>