force-app/main/default/objects/Admission__c/fields/Seats_Filled__c.field-meta.xml
<CustomField>
    <fullName>Seats_Filled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Seats Filled</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>