force-app/main/default/objects/Admission__c/fields/Starting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Starting_Fee__c</fullName>
    <label>Starting Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>