force-app/main/default/objects/Admission__c/fields/Total_No_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total No.of Seats</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>