force-app/main/default/objects/Admission__c/validationRules/No_null_values.validationRule-meta.xml
<ValidationRule>
    <fullName>No_null_values</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(Total_No_of_Seats__c),  ISNULL(Seats_Filled__c))</errorConditionFormula>
    <errorMessage>The Field should not be empty!</errorMessage>
</ValidationRule>